--- a/client/package.json
+++ b/client/package.json
@@ -25,12 +25,14 @@
     "@radix-ui/react-toast": "^1.1.5",
     "@radix-ui/react-tooltip": "^1.0.7",
     "@reduxjs/toolkit": "^1.9.7",
+    "@types/lodash": "^4.14.202",
     "axios": "^1.6.2",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.0.0",
     "cmdk": "^0.2.0",
     "dayjs": "^1.11.10",
     "embla-carousel-react": "^8.0.0-rc17",
+    "lodash": "^4.17.21",
     "lucide-react": "^0.293.0",
     "query-string": "^8.1.0",
     "react": "^18.2.0",
