--- a/backend/.env
+++ b/backend/.env
@@ -3,8 +3,8 @@ JWT_SECRET = khoalahaidang2003x@@@@@abc
 EMAIL_APP = haidang02032003@gmail.com
 EMAIL_APP_PASSWORD = mrslqnbrabbredxr
 SECRETKEY = khoalahaidang2003x@@@@@abc
-EXPIRESIN = 172800000
-EXPIRESIN_REFRESH = 1
-SECRETKEY_REFRESH = 1
+EXPIRESIN = 60000
+EXPIRESIN_REFRESH = 518400000
+SECRETKEY_REFRESH = khoalahaidang2003x@@@@@abccc
 
 
