--- a/backend/.env
+++ b/backend/.env
@@ -3,7 +3,7 @@ JWT_SECRET = khoalahaidang2003x@@@@@abc
 EMAIL_APP = haidang02032003@gmail.com
 EMAIL_APP_PASSWORD = mrslqnbrabbredxr
 SECRETKEY = khoalahaidang2003x@@@@@abc
-EXPIRESIN = 60000
+EXPIRESIN = 259200000
 EXPIRESIN_REFRESH = 518400000
 SECRETKEY_REFRESH = khoalahaidang2003x@@@@@abccc
 
