--- a/backend/.env
+++ b/backend/.env
@@ -1,10 +1,10 @@
-MONGODB_URL = mongodb+srv://haidang02032003:Haidang2003x@cluster0.ivbffxw.mongodb.net/tech_store
-JWT_SECRET = khoalahaidang2003x@@@@@abc
-EMAIL_APP = haidang02032003@gmail.com
-EMAIL_APP_PASSWORD = mrslqnbrabbredxr
-SECRETKEY = khoalahaidang2003x@@@@@abc
-EXPIRESIN = 259200000
-EXPIRESIN_REFRESH = 518400000
-SECRETKEY_REFRESH = khoalahaidang2003x@@@@@abccc
+MONGODB_URL=mongodb+srv://haidang02032003:Haidang2003x@cluster0.ivbffxw.mongodb.net/tech_store
+JWT_SECRET=khoalahaidang2003x@@@@@abc
+EMAIL_APP=haidang02032003@gmail.com
+EMAIL_APP_PASSWORD=mrslqnbrabbredxr
+SECRETKEY=khoalahaidang2003x@@@@@abc
+EXPIRESIN=259200000
+EXPIRESIN_REFRESH=518400000
+SECRETKEY_REFRESH=khoalahaidang2003x@@@@@abccc
 
 
