--- a/backend/.env
+++ b/backend/.env
@@ -1,7 +1,9 @@
 MONGODB_URL=mongodb+srv://haidang02032003:Haidang2003x@cluster0.ivbffxw.mongodb.net/tech_store
 JWT_SECRET=khoalahaidang2003x@@@@@abc
-EMAIL_APP=haidang02032003@gmail.com
-EMAIL_APP_PASSWORD=mrslqnbrabbredxr
+EMAIL_APP=test12202023test@gmail.com
+EMAIL_APP_PASSWORD=prymsxigzsntalpj
+MAIL_HOST=smtp.gmail.com
+MAIL_PORT=587
 SECRETKEY=khoalahaidang2003x@@@@@abc
 EXPIRESIN=259200000
 EXPIRESIN_REFRESH=518400000
